--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#660396A6"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -12,27 +13,36 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:clickable="true"
+            android:focusableInTouchMode="true"
             android:background="@drawable/bgroud"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:layout_height="@dimen/_30sdp"
                 android:layout_margin="@dimen/_20sdp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/edtSearch"
-                android:textColorHint="@color/white"
-                android:hint="City, State"
-                android:layout_width="@dimen/_200sdp"
-                android:layout_height="wrap_content"/>
-                <ImageView
-                    android:id="@+id/imgSearch"
-                    android:layout_marginLeft="@dimen/_20sdp"
-                    android:background="@drawable/search_24"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_30sdp"/>
+                android:background="@drawable/bg_edt_search"
+                android:paddingLeft="@dimen/_5sdp"
+                android:paddingRight="@dimen/_5sdp">
+
+                <EditText
+                    android:id="@+id/edtSearch"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@null"
+                    android:drawableLeft="@drawable/search_24"
+                    android:drawablePadding="@dimen/_3sdp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:hint="City, State"
+                    android:imeOptions="actionSearch"
+                    android:inputType="text"
+                    android:padding="@dimen/_3sdp"
+                    android:singleLine="true"
+                    android:textColorHint="@color/blue_EBEBF5_60" />
             </LinearLayout>
 <TextView
     android:layout_marginLeft="@dimen/_20sdp"
