--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/bgroud"
     tools:context=".MainActivity2">
+<ImageView
+    android:id="@+id/imgBack"
+    android:layout_margin="@dimen/_10sdp"
+    android:src="@drawable/ic_back"
+    android:layout_width="@dimen/_30sdp"
+    android:layout_height="@dimen/_30sdp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:layout_margin="@dimen/_10sdp"
+        android:id="@+id/tvName2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="HÀ NỘI"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_32sdp"
+        android:textStyle="bold" />
+    <ListView
+        android:id="@+id/lv_5day"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
