--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/bgroud"
@@ -24,17 +23,11 @@
                 android:layout_margin="@dimen/_20sdp">
 
                 <EditText
-                    
-                    android:drawableRight="@drawable/search_24"
-
-                    android:padding="@dimen/_10sdp"
                     android:id="@+id/edtSearch"
                     android:layout_width="@dimen/_200sdp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/custom_edt"
-                    android:hint=" Search for a city "
-                    android:textColor="@color/black"
-                    android:textColorHint="#6E6A6A" />
+                    android:hint="City, State"
+                    android:textColorHint="@color/white" />
 
                 <ImageView
                     android:id="@+id/imgSearch"
@@ -54,7 +47,6 @@
                 android:textSize="@dimen/_20sdp" />
 
             <LinearLayout
-
                 android:layout_width="@dimen/_300sdp"
                 android:layout_height="@dimen/_200sdp"
                 android:layout_gravity="center"
@@ -107,6 +99,7 @@
                         android:id="@+id/tvName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+
                         android:text="HÀ NỘI"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_32sdp"
@@ -216,7 +209,6 @@
             </LinearLayout>
 
             <Button
-                android:padding="@dimen/_5sdp"
                 android:id="@+id/btnChangeAc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
