--- a/app/src/main/res/layout/item_lisview.xml
+++ b/app/src/main/res/layout/item_lisview.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/_330sdp"
+    android:layout_width="@dimen/_300sdp"
     android:layout_height="@dimen/_180sdp"
+    android:layout_margin="@dimen/_10sdp"
     android:background="@drawable/rectangle"
     >
 
     <ImageView
-        android:id="@+id/imgStatus"
-        android:layout_width="@dimen/_130sdp"
-        android:layout_height="@dimen/_130sdp"
+        android:id="@+id/imgWeather"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
         android:layout_marginLeft="@dimen/_180sdp"
 
         android:src="@drawable/sun" />
 
+
     <TextView
-        android:id="@+id/tvStatus"
-        android:textColor="@color/white"
-        android:layout_marginLeft="@dimen/_100sdp"
-        android:layout_marginTop="@dimen/_130sdp"
-        android:layout_toEndOf="@id/abc"
-        android:text="mưa"
-        android:textSize="@dimen/_20sdp"
+        android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_180sdp"
 
-
+        android:layout_marginTop="@dimen/_130sdp"
+        android:text="mưa"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_20sdp" />
 
     <LinearLayout
         android:id="@+id/abc"
@@ -35,7 +35,7 @@
         <TextView
             android:id="@+id/tvTemp"
             android:textColor="@color/white"
-            android:layout_width="@dimen/_90sdp"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/_70sdp"
             android:layout_marginLeft="@dimen/_15sdp"
             android:layout_marginTop="@dimen/_30sdp"
@@ -75,7 +75,7 @@
             android:layout_marginLeft="@dimen/_15sdp"
             android:text="day"
             android:textColor="@color/white"
-            android:textSize="@dimen/_20sdp" />
+            android:textSize="@dimen/_15sdp" />
 
     </LinearLayout>
 
