--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="blue_1C1B33_50">#801C1B33</color>
     <color name="blue_EBEBF5_60">#99EBEBF5</color>
     <color name="blue_2E335A_00">#002E335A</color>
+    <color name="gray_100">#00373739</color>
 </resources>
